--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "jasonmiazga.com",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Jason Miazga's personal website and blog",
+  "version": "0.2.0",
+  "author": "Jason Miazga <jmiazga+github@gmail.com>",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gatsby": "^2.13.51",
@@ -13,12 +13,19 @@
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-remark-copy-linked-files": "^2.3.2",
+    "gatsby-remark-images": "^3.3.3",
+    "gatsby-remark-prismjs": "^3.5.1",
+    "gatsby-remark-responsive-iframe": "^2.4.2",
+    "gatsby-remark-smartypants": "^2.3.1",
     "gatsby-source-filesystem": "^2.1.8",
+    "gatsby-transformer-remark": "^2.8.8",
     "gatsby-transformer-sharp": "^2.2.5",
     "gatsby-transformer-yaml": "^2.2.4",
     "gsap": "^2.1.3",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -42,9 +49,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/jmiazga/jasonmiazga.com"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/jmiazga/jasonmiazga.com/issues"
   }
 }
